--- a/gallery.html
+++ b/gallery.html
@@ -6,26 +6,52 @@
 		<link rel= stylesheet href="css/style.css">
 	</head>
 <body class = "container">
-	<div>
+	<div class="main">
 		<h1>Фотографии растений</h1>
 		<h2 id = "waterPlants">Водоросли</h2>
-		<div>
+		<div class="waterPlants">
+			<div class="img">
 			<img src='img\water_plants_image_one.jpg' alt="Water plants">
-			<img src='img\water_plants_image_two.jpg' alt="Water plants">
+			<p class="info">Водоросля</p>
+			</div>
 		</div>
 		<h2 id = "moh">Мохообразные</h2>
-		<div>
+		<div class="moh">
+			<div class="img">
 			<img src='img\moh.jpg' alt="Moh">
-			<img src='img\moh_two.jpg' alt="moh">
+			<p class="info">Мохообразные</p>
+			</div>
 		</div>
 		<h2 id = "vascularSpore">Сосудистые споровые</h2>
-		<div>
+		<div class="vascularSpore">
+			<div class="img">
 			<img src='img\vascular_spore_one.jpg' alt="vascular spore">
-			<img src='img\vascular_spore_two.jpg' alt="vascular spore">
+			<p class="info">Поровые</p>
+			</div>
+			
 		</div>
 		<h2 id = "seedPlants">Семенные растения</h2>
-		<div>
+		<div class="seedPlants">
+			<div class="img">
 			<img src='img\seed_plants_one.jpg' alt="seed plants">
-			<img src='img\seed_plants_two.jpg' alt="seed plants">
+			<p class="info">Семенные</p>
+			</div>
+			
 		</div>
+	</div> 
+		<!--Sticky_block-->
+		<div class = "link_block">
+			<div>
+			<a href="#waterPlants">Водоросли</a>
+			</div>
+			<div>
+			<a href="#vascularSpore">Споровые</a>
+			</div>
+			<div>
+			<a href="#moh">Мох</a>
+			</div>
+			<div>
+			<a href="#seedPlants">Семенные растения</a>
+			</div>
+		</div> 
 </body>
