--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel= stylesheet href="css/style.css">
 	</head>
 <body class = "container">
-	<div>
+	<div class="block">
 		<h1>Растения: понятие</h1>
 		<p><strong> Расте́ния</strong> (лат. Plantae) — биологическое царство, одна из основных групп многоклеточных организмов, включающая в себя в том числе мхи, папоротники, хвощи, плауны, голосеменные и цветковые растения. Нередко к растениям относят также все водоросли или некоторые их группы. Растения (в первую очередь, цветковые) представлены многочисленными жизненными формами — среди них есть деревья, кустарники, травы и др. Растения являются объектом исследования науки ботаники.
 		</p>
