--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
 	<title>Растения | понятие происхождение эволюция</title>
 	<link rel= stylesheet href="css/style.css">
 	</head>
-<body class = "container">
+<body>
+	<div class = "container">
+	<ul class="menu">
+		<li><a href="#">Главная</a></li>
+		<li><a href="gallery.html">Галерея</a></li>
+		<li><a href="#">Home work 5</a>
+		<ul class="in_menu">
+			<li><a href="#">Float</a>
+				<ul class="in_in_menu">
+				<li><a href="float.html">Float1</a></li>
+				<li><a href="float_psevdoclr.html">Float2</a></li>	
+				</ul>
+			</li>
+			<li><a href="table-cell.html">T-cell</a></li>
+			<li><a href="in_block.html">In_block</a></li>
+			<li><a href="flexbox.html">Flex</a></li>
+		</ul>	
+		</li>
+	</ul>
 	<div class="block">
 		<h1>Растения: понятие</h1>
 		<p><strong> Расте́ния</strong> (лат. Plantae) — биологическое царство, одна из основных групп многоклеточных организмов, включающая в себя в том числе мхи, папоротники, хвощи, плауны, голосеменные и цветковые растения. Нередко к растениям относят также все водоросли или некоторые их группы. Растения (в первую очередь, цветковые) представлены многочисленными жизненными формами — среди них есть деревья, кустарники, травы и др. Растения являются объектом исследования науки ботаники.
 		</p>
-	</div>
+	</div class="block">
 	<div class = "block2">
 		<h2> Появление и эволюция</h2>
 		<h3> Архейская эра (3800—2500 млн лет назад)</h3>
@@ -29,11 +47,12 @@
 			<p>По состоянию на начало 2010 года, по данным Международного союза охраны природы (IUCN), было описано около 320 тысяч видов растений, из них около 280 тысяч видов цветковых, 1 тысяча видов голосеменных, около 16 тысяч мохообразных, около 12 тысяч видов высших споровых растений (Плауновидные и Папоротникообразные)[4]. Однако, это число увеличивается, так как постоянно открываются новые виды.
 				
 			</p>
-				<ul>
+				<ul class = "gallery_link">
  					<li><a href="gallery.html#waterPlants">Водоросли</a></li>
  					<li><a href="gallery.html#moh">Мохообразные</a></li>
  					<li><a href="gallery.html#vascularSpore">Сосудистые споровые</a></li>
  					<li><a href="gallery.html#seedPlants">Семенные растения</a></li>
 				</ul>
 		</div>
+	</div>
 	</body>
