--- a/table-cell.html
+++ b/table-cell.html
@@ -6,34 +6,102 @@
 	<link rel= stylesheet href="css/style.css">
 	</head>
 <body class = "container">
-	<div>
-		<h1>Растения: понятие</h1>
-		<p><strong> Расте́ния</strong> (лат. Plantae) — биологическое царство, одна из основных групп многоклеточных организмов, включающая в себя в том числе мхи, папоротники, хвощи, плауны, голосеменные и цветковые растения. Нередко к растениям относят также все водоросли или некоторые их группы. Растения (в первую очередь, цветковые) представлены многочисленными жизненными формами — среди них есть деревья, кустарники, травы и др. Растения являются объектом исследования науки ботаники.
-		</p>
-	</div>
-	<div class = "block2">
-		<h2> Появление и эволюция</h2>
-		<h3> Архейская эра (3800—2500 млн лет назад)</h3>
-		<p>Судя по палеонтологическим находкам, разделение живых существ на царства произошло более 3 млрд лет назад. Первыми автотрофными организмами стали фотосинтезирующие бактерии (сейчас они представлены пурпурными и зелёными бактериями, цианобактериями). В частности, в мезоархее (2800—3200 млн лет назад) уже существовали цианобактериальные маты.</p>
-
-		<h3> Протерозойская эра (2500—570 млн лет назад)</h3>
-		<p>Единой, отвечающей на все вопросы, теории происхождения эукариотических фотоавтотрофных организмов (растений) пока нет. Одна из них (теория симбиогенеза) предполагает возникновение эукариотических фототрофов как переход эукариотической гетеротрофной амёбовидной клетки к фототрофному типу питания через симбиоз с фотосинтезирующей бактерией, которая впоследствии превратилась в хлоропласт. Согласно этой теории, таким же образом возникают и митохондрии из аэробных бактерий. Так появляются водоросли — первые настоящие растения. В протерозойскую эру широко развиваются одноклеточные и колониальные синезелёные водоросли, появляются красные и зелёные водоросли.</p>
-		</p>
-
-		<h3>Палеозойская эра (570—230 млн лет назад)</h3>
-		<p>В конце силура (405—440 млн лет назад) на Земле происходят интенсивные горообразовательные процессы, приведшие к возникновению Скандинавских гор, гор Тянь-Шань, Саян, а также к обмелению и исчезновению многих морей. В результате некоторые водоросли (сходные с современными харовыми водорослями) выходят на сушу и заселяют литорали и супралиторали, что стало возможным благодаря деятельности бактерий и цианобактерий, образовавших на поверхности суши почвенный субстрат. Так возникают первые высшие растения — риниофиты. Особенность риниофитов заключается в появлении тканей и их дифференцировки на покровные, механические, проводящие и фотосинтезирующие. Это было спровоцировано резким отличием воздушной среды от водной. Древнейшее известное наземное растение — куксония. Куксония обнаружена в 1937 г. в силурийских песчаниках Шотландии (возраст порядка 415 млн лет). Дальнейшая эволюция высших растений разделилась на две линии: гаметофитную (моховидные) и спорофитную (сосудистые растения). Первые голосеменные растения появляются в начале мезозоя (примерно 220 млн лет назад). Первые покрытосеменные (цветковые) возникают в юрском периоде.
-		</p>
-	</div>
-		<div class = "block3">
-			<h2> Разнообразие растений</h2>
-			<p>По состоянию на начало 2010 года, по данным Международного союза охраны природы (IUCN), было описано около 320 тысяч видов растений, из них около 280 тысяч видов цветковых, 1 тысяча видов голосеменных, около 16 тысяч мохообразных, около 12 тысяч видов высших споровых растений (Плауновидные и Папоротникообразные)[4]. Однако, это число увеличивается, так как постоянно открываются новые виды.
-				
-			</p>
-				<ul>
- 					<li><a href="gallery.html#waterPlants">Водоросли</a></li>
- 					<li><a href="gallery.html#moh">Мохообразные</a></li>
- 					<li><a href="gallery.html#vascularSpore">Сосудистые споровые</a></li>
- 					<li><a href="gallery.html#seedPlants">Семенные растения</a></li>
+	<ul class="menu">
+		<li><a href="index.html">Главная</a></li>
+		<li><a href="gallery.html">Галерея</a></li>
+		<li><a href="#">Home work 5</a>
+		<ul class="in_menu">
+			<li><a href="#">Float</a>
+				<ul class="in_in_menu">
+				<li><a href="float.html">Float1</a></li>
+				<li><a href="float_psevdoclr.html">Float2</a></li>	
 				</ul>
+			</li>
+			<li><a href="#">T-cell</a></li>
+			<li><a href="in_block.html">In_block</a></li>
+			<li><a href="flexbox.html">Flex</a></li>
+		</ul>	
+		</li>
+	</ul>
+	<div>
+	<div class = "t_cell_400">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima doloribus, ipsam. Recusandae mollitia ducimus hic dignissimos harum voluptate earum. Dolor, laudantium quae earum error consectetur neque velit nobis ipsa sunt!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima doloribus, ipsam. Recusandae mollitia ducimus hic dignissimos harum voluptate earum. Dolor, laudantium quae earum error consectetur neque velit nobis ipsa sunt!
 		</div>
+		<div class = "t_cell_400">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima doloribus, ipsam. Recusandae mollitia ducimus hic dignissimos harum voluptate earum. Dolor, laudantium quae earum error consectetur neque velit nobis ipsa sunt!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima doloribus, ipsam. Recusandae mollitia ducimus hic dignissimos harum voluptate earum. Dolor, laudantium quae earum error consectetur neque velit nobis ipsa sunt!
+		</div>
+		<div class = "t_cell_400">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima doloribus, ipsam. Recusandae mollitia ducimus hic dignissimos harum voluptate earum. Dolor, laudantium quae earum error consectetur neque velit nobis ipsa sunt!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima doloribus, ipsam. Recusandae mollitia ducimus hic dignissimos harum voluptate earum. Dolor, laudantium quae earum error consectetur neque velit nobis ipsa sunt!
+		</div>
+	</div>
+	<div>
+		<div class = "t_cell_800">
+			<div class = "t_cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+			</div>
+			<div class = "t_cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+			</div>	
+	</div>
+		<div class = "t_cell_400">
+			<div class = "t_cell">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+			</div>
+			<div class = "t_cell">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+			</div>	
+			<div class = "t_cell">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+			</div>
+	</div>
+    </div>
+    <div>
+		<div class = "t_cell_400">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+		</div>
+		<div class = "t_cell_800">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+		<div class = "t_cell">
+			<div class = "t_cell_400">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+		</div>
+		<div class = "t_cell_400">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+		</div>
+	</div>
+</div>
+</div>
+<div>
+		<div class = "t_cell_800">
+			<div class = "t_cell">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+			</div>
+			<div class = "t_cell">
+				<div class = "t_cell_400">
+					<div class = "t_cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+						</div>
+						<div class = "t_cell">
+							<div class = "t_cell_200">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. 						
+						</div>
+						<div class = "t_cell_200">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. 						
+						</div>
+
+						</div>
+			</div>
+			</div>	
+	</div>
+		<div class = "t_cell_400">
+			<div class = "t_cell">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+			</div>
+			<div class = "t_cell">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+			</div>	
+			<div class = "t_cell">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam adipisci dicta perspiciatis voluptatibus consectetur vitae, quibusdam odio, maiores, atque alias accusamus id in fugit rerum nam. Qui libero magnam tenetur.
+			</div>
+	</div>
+    </div>
+
 	</body>
+
