--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,15 @@
 		<link rel= stylesheet href="css/style.css">
 	</head>
 <body class = "container">
+	<!--little menu with link-->
+		<div class="menu_link">
+			<a href="#waterPlants">Водоросли</a>
+			<a href="#moh">Мохообразные</a>
+			<a href="#vascularSpore">Сосудистые споровые</a>
+			<a href="#seedPlants">Семенные растения</a>
+
+		</div>
+	<!--MENU in top-->
 	<ul class="menu">
 		<li><a href="index.html">Главная</a></li>
 		<li><a href="#">Галерея</a></li>
@@ -23,6 +32,7 @@
 		</ul>	
 		</li>
 	</ul>
+	<!-- Content on page-->
 	<div class="block">
 		<h1>Фотографии растений</h1>
 		<h2 id = "waterPlants">Водоросли</h2>
