added pics+soc pics

--- a/gallery.html
+++ b/gallery.html
@@ -55,4 +55,9 @@
 			<img src='img\seed_plants_one.jpg' alt="seed plants">
 			<img src='img\seed_plants_two.jpg' alt="seed plants">
 		</div>
+		<ul class="bottom_menu">
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+	</ul>
 </body>
