--- a/index.html
+++ b/index.html
@@ -55,4 +55,11 @@
 				</ul>
 		</div>
 	</div>
+
+	<ul class="bottom_menu">
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+	</ul>
+
 	</body>
