--- a/flexbox.html
+++ b/flexbox.html
@@ -219,6 +219,11 @@
 
 		</div>
 	</div> 
+	<ul class="bottom_menu">
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+	</ul>
 
 	</body>
 
