--- a/float_psevdoclr.html
+++ b/float_psevdoclr.html
@@ -117,6 +117,11 @@
 	</div>
 	</div>
 </div>
+<ul class="bottom_menu">
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+	</ul>
 
 
 
