--- a/in_block.html
+++ b/in_block.html
@@ -112,5 +112,11 @@
 	</div>
 </div>
 
+<ul class="bottom_menu">
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+	</ul>
+
 	</body>
 
