--- a/table-cell.html
+++ b/table-cell.html
@@ -103,5 +103,11 @@
 	</div>
     </div>
 
+    <ul class="bottom_menu">
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+	</ul>
+
 	</body>
 
