added right menu+forms

--- a/float.html
+++ b/float.html
@@ -36,6 +36,7 @@
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium fuga tenetur, corporis nostrum expedita deserunt ipsa harum, asperiores optio inventore quod iste doloribus sequi facere delectus ad soluta voluptates laborum.
 		</div>
 </div>
+<div class="clear"></div>
 
 	<!--Second block-->
 <div class = "float">
@@ -59,6 +60,7 @@
 	</div>
 	</div>
  </div>
+ <div class="clear"></div>
 
 	<!--Third block-->
 <div class="float">
@@ -79,6 +81,7 @@
 	</div>
 	</div>
 </div>
+<div class="clear"></div>
 <!--Fourth block-->
 <div class="float">
 		<div class = "float_800">
@@ -117,6 +120,9 @@
 	</div>
 	</div>
 </div>
+<div class="clear"></div>
+
+<!--Bottom menu-->
 <ul class="bottom_menu">
 		<li><a href="#"></a></li>
 		<li><a href="#"></a></li>
