--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
 		</ul>	
 		</li>
 	</ul>
+
+<!--Right menu with social buttons-->
+
+	<div class="right_menu">
+		<p>Соцсети</p>
+		<div>
+			<ul>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+		</ul>
+		</div>
+	</div>
+
+<!--Content-->
+
 	<div class="block">
 		<h1>Растения: понятие</h1>
 		<p><strong> Расте́ния</strong> (лат. Plantae) — биологическое царство, одна из основных групп многоклеточных организмов, включающая в себя в том числе мхи, папоротники, хвощи, плауны, голосеменные и цветковые растения. Нередко к растениям относят также все водоросли или некоторые их группы. Растения (в первую очередь, цветковые) представлены многочисленными жизненными формами — среди них есть деревья, кустарники, травы и др. Растения являются объектом исследования науки ботаники.
@@ -61,5 +78,5 @@
 		<li><a href="#"></a></li>
 		<li><a href="#"></a></li>
 	</ul>
-
+<script> </script>
 	</body>
